JDK-7129240 : backout fix for 7102776 until 7128770 is resolved
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: hs23
  • Priority: P2
  • Status: Closed
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2012-01-11
  • Updated: 2013-03-26
  • Resolved: 2012-03-29
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u4Fixed 8Fixed hs23Fixed
Related Reports
Duplicate :  
Relates :  
Description
Backout the following fix:

7102776 Pack instanceKlass boolean fields into single u1 field

until the failures in the following are resolved:

7128770 assert(!instanceKlass::cast(d)->is_marked_dependent()) failed: checking

Comments
EVALUATION http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/8f8b94305aff
22-03-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/8f8b94305aff
18-01-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/8f8b94305aff
12-01-2012