7129240: backout fix for 7102776 until 7128770 is resolved

Reviewed-by: phh, bobv, coleenp, dcubed